# solo-compay-os

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.agents/skills/coach-retro/: SKILL.md
.agents/skills/eng-fastapi-starter/: SKILL.md
.agents/skills/pm-backlog/: SKILL.md
.agents/skills/pm-prd/: SKILL.md
.agents/skills/qa-pytest/: SKILL.md
.agents/skills/skill-template/: SKILL.md
.agents/skills/tech-architecture/: SKILL.md
docs/: 00-background.md  01-quickstart.md  02-architecture.md  03-how-skills-work.md  04-how-to-add-skills-from-skillsmp.md  05-how-to-write-missions.md  06-evals-and-scenarios.md  07-roadmap.md  08-security.md
scenarios/missions/: docs_only.yaml  landing_fastapi.yaml
src/solo_company_os/: cli.py
src/solo_company_os/core/: orchestrator.py  schema.py  skill.py  skill_index.py  trace.py  utils.py
src/solo_company_os/core/providers/: base.py  mock.py  openai_compatible.py
src/solo_company_os/dashboard/: server.py
src/solo_company_os/integrations/: skillsmp.py
tests/: test_mock_run.py  test_skill_parsing.py
